force-app/main/default/objects/ISM_Material_with_OPC_Snapshot__c/fields/Completeness_Score__c.field-meta.xml
<CustomField>
    <fullName>Completeness_Score__c</fullName>
    <label>Completeness Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>