force-app/main/default/objects/ISM_Material_with_OPC_Snapshot__c/fields/One_Time_Amount_OPC__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Amount_OPC__c</fullName>
    <label>One Time Amount (OPC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>