force-app/main/default/objects/ISM_Material_with_OPC_Snapshot__c/fields/Recurring_per_Lawyer_Professionals__c.field-meta.xml
<CustomField>
    <fullName>Recurring_per_Lawyer_Professionals__c</fullName>
    <label>Recurring per Lawyer / Professionals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>