force-app/main/default/objects/ISM_Material_with_OPC_Snapshot__c/fields/Services_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Services_Amount_Total__c</fullName>
    <label>Services Amount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>